kani-cli/tests/snapshots/codegen_tests__details_lib_rs.snap
---
source: kani-cli/tests/codegen_tests.rs
assertion_line: 37
expression: generated.lib_rs
---
// @generated by kani-cli from test-details.yaml — edit freely, but regenerate with `kani-cli generate` to reset.

use kani_shared::ast::{BlueprintBuilder, Expr, OffsetType};
use kani_shared::bindings::exports::kani::extension::manga_provider::Guest;
use kani_shared::host_abi::{extract, HttpRequest};
use kani_shared::{
    bindings, filter_list, to_shared_filters, types::ActiveFilter, wit_types, ExtensionResult,
    FilterState, MangaExtension, MangaStatus,
};
use std::sync::OnceLock;
use wit_types::{
    Chapter, ChapterInfo, ChapterList, ExtensionMetadata, MangaInfo, MangaList, MangaListItem,
    Page, PreferenceSpec,
};

pub struct TestDetails {
    base_url: String,
}

impl Default for TestDetails {
    fn default() -> Self {
        Self::new()
    }
}

impl TestDetails {
    pub fn new() -> Self {
        Self {
            base_url: "https://example.com".to_string(),
        }
    }

    pub fn metadata() -> ExtensionMetadata {
        ExtensionMetadata {
            id: "test-details".to_string(),
            name: "TestDetails".to_string(),
            version: "0.1.0".to_string(),
            base_url: "https://example.com".to_string(),
            language: "en".to_string(),
            nsfw: false,
            unrestricted_http: false,
            mihon_source_id: None,
        }
    }
}

impl MangaExtension for TestDetails {
    fn name(&self) -> &str {
        "TestDetails"
    }

    fn get_popular_manga(
        &self,
        _page: i32,
        _page_size: i32,
        _filters: &[ActiveFilter],
    ) -> ExtensionResult<MangaList> {
        Ok(MangaList {
            manga: vec![],
            has_next_page: false,
            total_pages: None,
        })
    }

    fn search_manga(
        &self,
        _query: &str,
        _page: i32,
        _page_size: i32,
        _filters: &[ActiveFilter],
    ) -> ExtensionResult<MangaList> {
        Ok(MangaList {
            manga: vec![],
            has_next_page: false,
            total_pages: None,
        })
    }

    fn get_manga_details(&self, manga_id: &str) -> ExtensionResult<MangaInfo> {
        let req = HttpRequest::get(format!("{}/manga/{}", self.base_url, manga_id));
        let bp = BlueprintBuilder::new(":root")
            .request(req)
            .field_opt("cover_url", Expr::dom("img.cover").attr("src"))
            .field_opt("description", Expr::dom(".description").text())
            .field("status", Expr::dom(".status").text().trim().lower())
            .field("title", Expr::dom("h1").text().trim())
            .build();
        let rows = extract::html(None, &bp)?;
        let row = rows
            .rows_get(0)
            .map_err(|_| kani_shared::ExtensionError::ParseError("no details row".into()))?;
        let status = match row.get_str("/status").as_deref() {
            Some("ongoing") => MangaStatus::Ongoing,
            Some("completed") => MangaStatus::Completed,
            Some("hiatus") => MangaStatus::Hiatus,
            Some("cancelled") => MangaStatus::Cancelled,
            _ => MangaStatus::Unknown,
        };
        Ok(MangaInfo {
            cover_url: row.get_str("/cover_url"),
            description: row.get_str("/description"),
            id: manga_id.to_string(),
            status: status,
            title: row.require_str("/title")?,
        })
    }

    fn get_chapter_list(
        &self,
        _manga_id: &str,
        _page: i32,
        _page_size: Option<i32>,
        _sort: Option<String>,
    ) -> ExtensionResult<ChapterList> {
        Ok(ChapterList {
            chapters: vec![],
            has_next_page: false,
            total_pages: None,
        })
    }

    fn get_pages(&self, _manga_id: &str, _chapter_id: &str) -> ExtensionResult<Chapter> {
        Err(kani_shared::ExtensionError::NotImplemented)
    }

    fn get_chapter_sort_list(&self) -> ExtensionResult<Vec<wit_types::ChapterSortOption>> {
        Ok(vec![])
    }

    fn get_filter_list(&self) -> ExtensionResult<wit_types::FilterList> {
        Ok(filter_list! {})
    }

    fn get_preferences(&self) -> ExtensionResult<Vec<PreferenceSpec>> {
        Ok(vec![])
    }
}

impl Guest for TestDetails {
    fn get_metadata() -> Result<ExtensionMetadata, String> {
        Ok(TestDetails::metadata())
    }

    fn get_popular_manga(
        _page: i32,
        _page_size: i32,
        _filters: Vec<wit_types::ActiveFilter>,
    ) -> Result<MangaList, String> {
        Ok(MangaList {
            manga: vec![],
            has_next_page: false,
        })
    }

    fn search_manga(
        _query: String,
        _page: i32,
        _page_size: i32,
        _filters: Vec<wit_types::ActiveFilter>,
    ) -> Result<MangaList, String> {
        Ok(MangaList {
            manga: vec![],
            has_next_page: false,
        })
    }

    fn get_filter_list() -> Result<wit_types::FilterList, String> {
        get_extension().get_filter_list().map_err(|e| e.to_string())
    }

    fn get_manga_details(manga_id: String) -> Result<MangaInfo, String> {
        get_extension()
            .get_manga_details(&manga_id)
            .map_err(|e| e.to_string())
    }

    fn get_chapter_list(
        manga_id: String,
        page: i32,
        page_size: Option<i32>,
        sort: Option<String>,
    ) -> Result<ChapterList, String> {
        get_extension()
            .get_chapter_list(&manga_id, page, page_size, sort)
            .map_err(|e| e.to_string())
    }

    fn get_chapter_sort_list() -> Result<Vec<wit_types::ChapterSortOption>, String> {
        get_extension()
            .get_chapter_sort_list()
            .map_err(|e| e.to_string())
    }

    fn get_pages(manga_id: String, chapter_id: String) -> Result<Chapter, String> {
        get_extension()
            .get_pages(&manga_id, &chapter_id)
            .map_err(|e| e.to_string())
    }

    fn get_preferences() -> Result<Vec<PreferenceSpec>, String> {
        get_extension().get_preferences().map_err(|e| e.to_string())
    }

    fn get_url(manga_id: String) -> Result<String, String> {
        get_extension()
            .get_url(&manga_id)
            .map_err(|e| e.to_string())
    }
}

static EXTENSION: OnceLock<TestDetails> = OnceLock::new();

fn get_extension() -> &'static TestDetails {
    EXTENSION.get_or_init(TestDetails::new)
}

bindings::export!(TestDetails);
