kani-cli/tests/snapshots/codegen_tests__filter_format_lib_rs.snap
---
source: kani-cli/tests/codegen_tests.rs
expression: generated.lib_rs
---
// @generated by kani-cli from test-filter-format.yaml — edit freely, but regenerate with `kani-cli generate` to reset.

use kani_shared::ast::{BlueprintBuilder, Expr, OffsetType};
use kani_shared::bindings::exports::kani::extension::manga_provider::Guest;
use kani_shared::host_abi::{extract, HttpRequest};
use kani_shared::{
    bindings, filter_list, to_shared_filters, types::ActiveFilter, wit_types, ExtensionMetadata,
    ExtensionResult, FilterState, MangaExtension,
};
use std::sync::OnceLock;
use wit_types::{Chapter, ChapterInfo, ChapterList, MangaInfo, MangaList, PreferenceSpec};

kani_shared::guest_alloc!();

pub struct TestFilterFormat {
    base_url: String,
}

impl Default for TestFilterFormat {
    fn default() -> Self {
        Self::new()
    }
}

impl TestFilterFormat {
    pub fn new() -> Self {
        Self {
            base_url: "https://example.com".to_string(),
        }
    }

    pub fn metadata() -> ExtensionMetadata {
        ExtensionMetadata {
            id: "test-filter-format".to_string(),
            name: "TestFilterFormat".to_string(),
            version: "0.1.0".to_string(),
            base_url: "https://example.com".to_string(),
            language: "en".to_string(),
            nsfw: false,
            unrestricted_http: false,
            mihon_source_id: None,
            rate_limit: None,
            icon: None,
            languages: vec![],
            description: None,
            schema_version: 1_u32,
            min_kani_version: None,
            requires_capabilities: vec![],
            sections: vec![],
            scripts: std::collections::BTreeMap::new(),
            pre_request: None,
            on_status: std::collections::BTreeMap::new(),
            endpoint_pre_request: std::collections::BTreeMap::new(),
            endpoint_on_status: std::collections::BTreeMap::new(),
            cache: std::collections::BTreeMap::new(),
            dsl_schema_version: Some(kani_shared::ast::DSL_SCHEMA_VERSION),
        }
    }
}

impl MangaExtension for TestFilterFormat {
    fn name(&self) -> &str {
        "TestFilterFormat"
    }

    fn get_popular_manga(
        &self,
        _page: i32,
        _page_size: i32,
        _filters: &[ActiveFilter],
    ) -> ExtensionResult<MangaList> {
        Ok(MangaList {
            manga: vec![],
            has_next_page: false,
            total_pages: None,
        })
    }

    fn search_manga(
        &self,
        query: &str,
        page: i32,
        page_size: i32,
        filters: &[ActiveFilter],
    ) -> ExtensionResult<MangaList> {
        let mut req = HttpRequest::get(format!("{}/search", self.base_url))
            .endpoint_id("search")
            .query("q", query);

        let __filter_mapping: [(String, kani_shared::request::FilterMapping); 3] = [
            (
                "genres".to_string(),
                kani_shared::request::FilterMapping::Simple("genre".to_string()),
            ),
            (
                "nsfw".to_string(),
                kani_shared::request::FilterMapping::Simple("nsfw".to_string()),
            ),
            (
                "year_range".to_string(),
                kani_shared::request::FilterMapping::TupleSplit {
                    from_param: "year_from".to_string(),
                    to_param: "year_to".to_string(),
                },
            ),
        ];
        let __filter_format: Option<kani_shared::request::FilterFormat> =
            Some(kani_shared::request::FilterFormat {
                multiselect: kani_shared::request::ArrayFormat::Bracket,
                omit_empty: false,
                bool_format: kani_shared::request::BoolFormat::OneZero,
                array_separator: "|".to_string(),
            });
        for (k, v) in kani_shared::request::apply_filters(
            &__filter_mapping,
            __filter_format.as_ref(),
            filters,
        ) {
            req = req.query(k, v);
        }
        let bp = BlueprintBuilder::new(".results .item")
            .request(req)
            .field(
                "id",
                Expr::self_ref().first("a").attr("href").split("/").at(-1),
            )
            .field("title", Expr::self_ref().first(".title").text().trim())
            .build();
        let rows = extract::html(None, &bp)?;
        Ok(kani_shared::unpack::unpack_manga_list(
            &rows,
            kani_shared::unpack::HasNextPage::FromScalar,
            kani_shared::unpack::TotalPages::None,
            &[],
        )
        .logged("search"))
    }

    fn get_manga_details(&self, _manga_id: &str) -> ExtensionResult<MangaInfo> {
        Err(kani_shared::ExtensionError::not_found(
            "get_manga_details not implemented for this source".into(),
        ))
    }

    fn get_chapter_list(
        &self,
        _manga_id: &str,
        _page: i32,
        _page_size: Option<i32>,
        _sort: Option<String>,
    ) -> ExtensionResult<ChapterList> {
        Ok(ChapterList {
            chapters: vec![],
            has_next_page: false,
            total_pages: None,
        })
    }

    fn get_pages(&self, _manga_id: &str, _chapter_id: &str) -> ExtensionResult<Chapter> {
        Err(kani_shared::ExtensionError::not_found(
            "get_pages not implemented for this source".into(),
        ))
    }

    fn get_chapter_sort_list(&self) -> ExtensionResult<Vec<wit_types::SortOption>> {
        Ok(vec![])
    }

    fn get_filter_list(&self) -> ExtensionResult<wit_types::FilterList> {
        Ok(filter_list! {
            "genres", "Genres", Multiselect, [("Action", "action"), ("Romance", "romance")];
            "nsfw", "Show NSFW", Checkbox;
            "year_range", "Year range", TextInput
        })
    }

    fn get_fetched_option_sets(&self) -> ExtensionResult<String> {
        Ok(r#"[]"#.to_string())
    }

    fn get_preferences(&self) -> ExtensionResult<Vec<PreferenceSpec>> {
        Ok(vec![])
    }
}

impl Guest for TestFilterFormat {
    fn get_metadata() -> Result<String, wit_types::ExtensionError> {
        Ok(
            kani_shared::serde_json::to_string(&TestFilterFormat::metadata())
                .expect("ExtensionMetadata serializes to JSON"),
        )
    }

    fn get_popular_manga(
        _page: i32,
        _page_size: i32,
        _filters: Vec<wit_types::ActiveFilter>,
    ) -> Result<MangaList, wit_types::ExtensionError> {
        Ok(MangaList {
            manga: vec![],
            has_next_page: false,
            total_pages: None,
        })
    }

    fn search_manga(
        query: String,
        page: i32,
        page_size: i32,
        filters: Vec<wit_types::ActiveFilter>,
    ) -> Result<MangaList, wit_types::ExtensionError> {
        let shared = to_shared_filters(filters);
        get_extension()
            .search_manga(&query, page, page_size, &shared)
            .map_err(|e| e.into_wit())
    }

    fn get_filter_list() -> Result<wit_types::FilterList, wit_types::ExtensionError> {
        get_extension().get_filter_list().map_err(|e| e.into_wit())
    }

    fn get_fetched_option_sets() -> Result<String, wit_types::ExtensionError> {
        get_extension()
            .get_fetched_option_sets()
            .map_err(|e| e.into_wit())
    }

    fn get_manga_details(manga_id: String) -> Result<MangaInfo, wit_types::ExtensionError> {
        get_extension()
            .get_manga_details(&manga_id)
            .map_err(|e| e.into_wit())
    }

    fn get_chapter_list(
        manga_id: String,
        page: i32,
        page_size: Option<i32>,
        sort: Option<String>,
    ) -> Result<ChapterList, wit_types::ExtensionError> {
        get_extension()
            .get_chapter_list(&manga_id, page, page_size, sort)
            .map_err(|e| e.into_wit())
    }

    async fn get_chapter_list_stream(
        manga_id: String,
        sort: Option<String>,
    ) -> kani_shared::StreamReader<Result<ChapterInfo, wit_types::ExtensionError>> {
        kani_shared::bridge_chapter_list_stream(get_extension(), manga_id, sort)
    }

    fn get_chapter_sort_list() -> Result<Vec<wit_types::SortOption>, wit_types::ExtensionError> {
        get_extension()
            .get_chapter_sort_list()
            .map_err(|e| e.into_wit())
    }

    fn get_pages(
        manga_id: String,
        chapter_id: String,
    ) -> Result<Chapter, wit_types::ExtensionError> {
        get_extension()
            .get_pages(&manga_id, &chapter_id)
            .map_err(|e| e.into_wit())
    }

    fn get_preferences() -> Result<Vec<PreferenceSpec>, wit_types::ExtensionError> {
        get_extension().get_preferences().map_err(|e| e.into_wit())
    }

    fn get_url(manga_id: String) -> Result<String, wit_types::ExtensionError> {
        get_extension().get_url(&manga_id).map_err(|e| e.into_wit())
    }
}

static EXTENSION: OnceLock<TestFilterFormat> = OnceLock::new();

fn get_extension() -> &'static TestFilterFormat {
    EXTENSION.get_or_init(TestFilterFormat::new)
}

bindings::export!(TestFilterFormat);
